# kharon

./: Cargo.toml  README.md
src/: logger.rs  main.rs
src/command/: mod.rs
src/term/: input.rs  mod.rs
src/term/reader/: mod.rs  stdin.rs
src/term/sys/: kqueue.rs  mod.rs
src/view/: mod.rs
src/view/buffer/: cell.rs  line.rs  mod.rs  palette.rs
