[package]
name = "kharon"
version = "0.1.0"
authors = ["inkyu <gofiri@gmail.com>"]
edition = "2018"

[dependencies]
common = {path = "deps/common"}
macros = {path = "deps/macros"}

color-backtrace = { version = "*", features = ["failure-bt"] }
chrono = "*"
libc = "*"
log = "*"
failure = "*"
futures-preview = "0.3.0-alpha"
termion = "*"
dope = {path = "../dope"}